<resources>
    <string name="app_name">Randomaizer</string>
    <string name="label_rnd">Get a random number</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="from_value">0</string>
    <string name="to_value">10</string>
    <string name="random_value">R</string>
    <string name="edit">Edit</string>
    <string name="but_send_email">Send Email</string>
    <string name="but_random">Random</string>
    <string name="editing_label">Editing</string>
    <string name="from_edit">From:</string>
    <string name="to_edit">To:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>